--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,15 @@
     right: -65vw;
 }
 
+
+@media (min-width: 65px) and (max-height:400px) {
+    .logo {
+        right: -65vw;
+        top: 106px;
+    }
+}
+
+
 @media (max-width: 500px) {
     .logo {
         width: 46vw;
@@ -30,6 +39,7 @@
     position: absolute;
     transform: translateY(-50%);
     color: #fff;
+    padding-right: 17px;
 }
 
 @media (max-width: 500px) and (max-height:700px) {
@@ -64,7 +74,7 @@
 
 @media (max-width: 500px) {
     .content p {
-        font-size: 18px;
+        font-size: 15px;
     }
 }
 
